--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "knex": "^2.5.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
